<resources>
    <string name="app_name">FoodDeliveryApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="log_in_btn">Log in</string>
    <string name="register_text">Register</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="gustavo_fring">Gustavo Fring</string>
    <string name="log_out">Log out</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="_5_0">5.0</string>
    <string name="product_name">Product name</string>
    <string name="min_45">Min - $45</string>
    <string name="dinner">Dinner</string>
    <string name="make_order">Make Order</string>
    <string name="orders">Orders</string>

    <string name="select_payment_method">Select Payment Method</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>

    <string-array name="payment_methods">
        <item>Credit Card</item>
        <item>PayPal</item>
        <item>Cod</item>

    </string-array>
</resources>