<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home"
            />
    <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/baseline_today_24"
            android:title="@string/daily_meal"
            />
    <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favorite_filled"
            android:title="@string/favourite"
            />

    <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/my_cart"
            />

    <item
            android:id="@+id/nav_order"
            android:icon="@drawable/baseline_wallet_24"
            android:title="@string/orders"
            />
</menu>
