<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginSignin.RegistrationActivity"
        >

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg6"
            android:foreground="@drawable/foreground_design"
            android:scaleType="centerCrop"
            android:id="@+id/imageView2"
            tools:layout_editor_absoluteY="-58dp"
            tools:layout_editor_absoluteX="0dp"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Los Pollos Hermanos"
            android:textColor="@color/white"
            android:textSize="33sp"
            android:fontFamily="@font/lobster"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias=".2"
            android:id="@+id/textView3"
            />

    <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="#FBFBFB"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="32dp"
            />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableLeft="@drawable/baseline_alternate_email_24"
            android:drawablePadding="10dp"
            android:backgroundTint="#CCCCCC"
            android:id="@+id/editText2"
            android:layout_marginTop="40dp"
            />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableLeft="@drawable/baseline_password_24"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:backgroundTint="#CCCCCC"
            android:id="@+id/searchEditText"
            />

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/log_in_btn"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            android:id="@+id/button2"
            android:background="@drawable/btn_gb_design"
            android:onClick="Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintTop_toBottomOf="@+id/searchEditText"
            />

    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textAlignment="center"
            android:textColor="#FBFBFB"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.404"
            app:layout_constraintVertical_bias="0.549"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="Register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.553"
            />

</androidx.constraintlayout.widget.ConstraintLayout>