<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/bottom_sheet_bg"
        android:transitionGroup="true"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout2"
            android:orientation="vertical"
            >

        <Spinner
                android:id="@+id/spinnerPaymentMethod"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:entries="@array/payment_methods"
                android:prompt="@string/select_payment_method"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/amarante"
                />

        <EditText
                android:id="@+id/editShippingAddress"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/shipping_address"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/amarante"
                />

    </LinearLayout>

    <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="@string/place_order"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintVertical_bias="0.915"
            />

    <Button
            android:id="@+id/btnCancelOrder"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="Cancel"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintVertical_bias="0.919"
            />

</androidx.constraintlayout.widget.ConstraintLayout>
