<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:tools="http://schemas.android.com/tools"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:layout_margin="9dp"
                                   app:cardCornerRadius="10dp"
                                   app:cardElevation="4dp"
        >
    
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/ver_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="center"
                android:src="@drawable/dinner"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/contrainlayout"
                android:background="@drawable/round_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0"
                >

            <TextView
                    android:fontFamily="@font/amita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:text="@string/product_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="0.133"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.057"
                    android:layout_marginTop="10dp"
                    />

            <ImageView
                    android:layout_width="52dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ratingbar_yellow_full"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginRight="9dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/imageView3"
                    app:layout_constraintVertical_bias="0.057"
                    app:layout_constraintStart_toEndOf="@+id/rating"
                    />

            <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_0"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.225"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.716"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_00_23_00"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/timing"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
                    android:layout_marginEnd="100dp"
                    />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_access_time_filled_24"
                    android:id="@+id/imageView4"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/timing"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintVertical_bias="0.954"
                    />

            <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_45"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"
                    android:layout_marginEnd="20dp"
                    />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_monetization_on_24"
                    android:id="@+id/imageView5"

                    app:layout_constraintEnd_toStartOf="@+id/price"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.954"
                    />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>